# Panopticron

./: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  example.run.sh  pyproject.toml
.github/workflows/: ci_pipeline.yml
script/: panopticron.py
tests/: test_panopticron.py
